src/objects/FieldServiceActivityAttendee__c.object
<CustomObject>
    <description>SFDC1-166.
Tracks attendees for the Field Service Activities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFDC1-1052.
Account associated with the Contact</description>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>SFDC1-1052.
Main contact associated with the field Service Activity.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Field Service Activity Attendees</relationshipLabel>
        <relationshipName>FieldServiceActivityAttendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>SFDC1-1052.
Email associated to the contact.</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldServiceActivity__c</fullName>
        <description>SFDC1-1052.
Reference to the Field Service Activity.</description>
        <label>Field Service Activity</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Field Service Activity Attendees</relationshipLabel>
        <relationshipName>FSAAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDFSAatt__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>FSt{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID FSAatt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>SFDC1-1052.
Phone number associated with the contact.</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-1052.
Status of the associated Attendee.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Service Activity Attendee</label>
    <nameField>
        <displayFormat>FSATND-{00000}</displayFormat>
        <label>FSA Attendee #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Activity Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>